ctowasm/test/samples/error/declarations/empty_struct_declaration_list.c
// Empty struct declaration list. Violates 6.7.2.1/2 of the C17 standard
int main() {
  struct A {} x;
}